comnpleted the project

--- a/My First Project with Go/Calculate net income/task-info.yaml
+++ b/My First Project with Go/Calculate net income/task-info.yaml
@@ -6,7 +6,10 @@ files:
   - name: test/MyFirstProjectTest.java
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/421/stages/2453/implement#comment
+feedback_link: https://hyperskill.org/learn/step/40250#comment
 check_profile: hyperskill_go
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Sat, 15 Mar 2025 02:36:47 UTC"
 record: -1
