--- a/My First Project with Go/Measuring total income/task-info.yaml
+++ b/My First Project with Go/Measuring total income/task-info.yaml
@@ -6,7 +6,10 @@ files:
   - name: test/MyFirstProjectTest.java
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/421/stages/2452/implement#comment
+feedback_link: https://hyperskill.org/learn/step/40249#comment
 check_profile: hyperskill_go
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Sat, 15 Mar 2025 01:55:42 UTC"
+record: 2
