--- a/My First Project with Go/Print the prices/task-info.yaml
+++ b/My First Project with Go/Print the prices/task-info.yaml
@@ -6,7 +6,10 @@ files:
   - name: main.go
     visible: true
     learner_created: false
-feedback_link: https://hyperskill.org/projects/421/stages/2451/implement#comment
+feedback_link: https://hyperskill.org/learn/step/40248#comment
 check_profile: hyperskill_go
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Fri, 14 Mar 2025 02:28:41 UTC"
+record: 1
