--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,11 +3,11 @@ hyperskill_project:
   ide_files: https://hyperskill.org/api/projects/421/additional-files/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Sat, 15 Mar 2025 01:31:20 UTC"
 stages:
   - id: 2451
     step: 40248
-    is_completed: false
+    is_completed: true
   - id: 2452
     step: 40249
     is_completed: false
